--- a/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_ventes.yaml
+++ b/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_ventes.yaml
@@ -2,8 +2,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_farine_riz_sucre: 16000000
       charges_farine_riz_sucre: 0
     persons:
@@ -17,8 +17,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_hydrocarbures_au_detail: 16000000
       charges_hydrocarbures_au_detail: 0
     persons:
@@ -32,8 +32,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_hydrocarbures_au_detail: 24000000
       charges_hydrocarbures_au_detail: 0
     persons:
@@ -47,8 +47,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_vente_gros_lait_frais: 16000000
       charges_vente_gros_lait_frais: 16000000
     persons:
@@ -62,8 +62,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_importateurs_grossistes: 16000000
       charges_importateurs_grossistes: 16000000
     persons:
@@ -77,8 +77,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_ventes_en_gros: 16000000
       charges_ventes_en_gros: 0
     persons:
@@ -92,8 +92,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_tabacs: 16000000
       charges_tabacs: 0
     persons:
@@ -107,8 +107,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_negociants_detaillants_ca_superieur_20mf: 30000000
       charges_negociants_detaillants_ca_superieur_20mf: 0
     persons:
@@ -122,8 +122,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_ventes_inferieur_20_millions: 16000000
       charges_ventes_inferieur_20_millions: 0
     persons:
@@ -137,8 +137,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_ventes_a_l_aventure_armateurs: 15000000
       charges_ventes_a_l_aventure_armateurs: 0
     persons:
@@ -152,8 +152,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       charges_ventes_a_l_aventure_armateurs: 0
     persons:
@@ -167,8 +167,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       charges_ventes_a_l_aventure_armateurs: 10000000
     persons:
@@ -182,8 +182,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: N
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       charges_ventes_a_l_aventure_armateurs: 10000000
     persons:
@@ -197,8 +197,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: O
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       charges_ventes_a_l_aventure_armateurs: 10000000
     persons:
@@ -212,8 +212,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       charges_ventes_a_l_aventure_armateurs: 10000000
     persons:
@@ -227,8 +227,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_ventes_sans_abattement: 100000000
       charges_ventes_sans_abattement: 100000000
     persons:
