--- a/openfisca_pf/tests/dicp/it/activites_simples.yaml
+++ b/openfisca_pf/tests/dicp/it/activites_simples.yaml
@@ -2,8 +2,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: false
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: N
+      annexes_IT_fournies: N
       chiffre_affaire_denrees_emporter_ou_sur_place: 22687952
       charges_denrees_emporter_ou_sur_place: 15598825
     persons:
@@ -14,8 +14,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_denrees_emporter_ou_sur_place: 16171607
       charges_denrees_emporter_ou_sur_place: 16799692
     persons:
@@ -26,8 +26,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_denrees_emporter_ou_sur_place: 60485971
       charges_denrees_emporter_ou_sur_place: 48489692
     persons:
@@ -38,8 +38,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: N
       chiffre_affaire_denrees_emporter_ou_sur_place: 126565780
       charges_denrees_emporter_ou_sur_place: 86390456
     persons:
@@ -50,8 +50,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: false
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: N
       chiffre_affaire_profession_liberale: 5597503
       charges_profession_liberale: 3801187
     persons:
@@ -62,8 +62,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_profession_liberale: 10066080
       charges_profession_liberale: 7744534
     persons:
@@ -74,8 +74,8 @@
 #   period: 2020
 #   input:
 #     entreprise:
-#       releve_de_charges_fourni: true
-#       annexes_IT_fournies: true
+#       releve_de_charges_fourni: O
+#       annexes_IT_fournies: O
 #       chiffre_affaire_negociants_detaillants_ca_superieur_20mf: 20892282
 #       charges_negociants_detaillants_ca_superieur_20mf: 20772330
 #     persons:
@@ -86,8 +86,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_armateurs_de_goelettes: 111659288
       charges_armateurs_de_goelettes: 199349501
     persons:
@@ -98,8 +98,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_entreprise_de_travaux_publics: 86559517
       charges_entreprise_de_travaux_publics: 66196589
     persons:
@@ -110,8 +110,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_entreprise_de_travaux_publics: 816554761
       charges_entreprise_de_travaux_publics: 518095798
     persons:
@@ -122,8 +122,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_boulangerie_baguettes_detail: 23932100
       charges_boulangerie_baguettes_detail: 15076733
     persons:
@@ -134,8 +134,8 @@
   period: 2020
   input:
     entreprise:
-      releve_de_charges_fourni: true
-      annexes_IT_fournies: true
+      releve_de_charges_fourni: O
+      annexes_IT_fournies: O
       chiffre_affaire_boulangerie_baguettes_gros: 48106250
       charges_boulangerie_baguettes_gros: 36318543
     persons:
