--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 
 [flake8]
 hang-closing = true
-ignore       = E128,E251,F403,F405,E501,W503
+ignore       = E128,E251,E741,F403,F405,E501,W503
 
 [pep8]
 hang-closing = true
